# claude-agent-in-cloud

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
deploy/: deploy.sh
docker/: Dockerfile.agent  Dockerfile.agent-py  Dockerfile.server  Dockerfile.web  agent-claude-py.json  agent-claude.json  agent-claude.md  agent-mcp-py.json  agent-settings.json  docker-compose.prod.yml  docker-compose.yml  nginx.conf
py/: pyproject.toml
skills/e2e-verify/: SKILL.md
skills/manage-task/: SKILL.md
ts/: package-lock.json  package.json  tsconfig.base.json
ts/.claude/: settings.local.json
ts/apps/server/: package.json
ts/apps/server/src/: agent.ts  index.ts  project-context.ts  services.ts  session-store.ts
ts/apps/server/src/middleware/: auth.ts
ts/apps/server/src/routes/: cron.ts  events.ts  github.ts  mcp-communicate.ts  mcp-project-context.ts  mcp.ts  project-context.ts  project-tasks.ts  sessions.ts  tasks.ts
ts/apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
ts/apps/web/src/: App.tsx
ts/apps/web/src/components/: CommStream.tsx  CronPanel.tsx  EventStream.tsx  GitHubPanel.tsx  GitHubRepos.tsx  GitHubToken.tsx  ProjectContext.tsx  SessionList.tsx  TaskInput.tsx
ts/apps/web/src/hooks/: useSSE.ts
ts/apps/web/src/lib/: api.ts
ts/mcps/project-management/: package.json
ts/mcps/project-management/src/: api-client.ts  index.ts
