[project]
name = "claude-agent-in-cloud"
version = "0.1.0"
description = "A minimalist design of hosting claude agent remotely and access it through web interface"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
